feat: implement bulk status change for spools and add corresponding UI elements

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -94,6 +94,13 @@
     "filamentTypes": "Filament-Arten",
     "noData": "Keine Daten",
     "lowStockSpools": "Spulen (fast leer)",
+    "archive": "Archivieren",
+    "archiving": "Archivierung...",
+    "archiveAllEmpty": "Alle leeren Spulen archivieren",
+    "archiveAllLow": "Alle niedrigen Spulen archivieren",
+    "confirmArchiveAll": "Möchten Sie wirklich alle hier gelisteten Spulen archivieren?",
+    "confirmArchiveOne": "Möchten Sie diese Spule archivieren?",
+    "archiveSuccess": "Spulen erfolgreich archiviert.",
     "spool": "Spule",
     "filament": "Filament",
     "manufacturer": "Hersteller",
