--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -93,6 +93,13 @@
     "filamentTypes": "Filament Types",
     "noData": "No data",
     "lowStockSpools": "Low Stock Spools",
+    "archive": "Archive",
+    "archiving": "Archiving...",
+    "archiveAllEmpty": "Archive all empty spools",
+    "archiveAllLow": "Archive all low spools",
+    "confirmArchiveAll": "Do you really want to archive all spools listed here?",
+    "confirmArchiveOne": "Do you want to archive this spool?",
+    "archiveSuccess": "Spools successfully archived.",
     "spool": "Spool",
     "filament": "Filament",
     "manufacturer": "Manufacturer",
