feat: füge Funktion zum Löschen von Benutzern hinzu und implementiere Sicherheitsprüfungen

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -157,7 +157,7 @@
     "diameterMm": "Diameter (mm) *",
     "rawMaterialWeight": "Raw Material Weight (g)",
     "rawMaterialPlaceholder": "e.g. 1000",
-    "defaultSpoolWeight": "Default Spool Weight (g)",
+    "defaultSpoolWeight": "Empty Spool Weight (g)",
     "defaultSpoolWeightPlaceholder": "e.g. 250",
     "noFilaments": "No filaments found.",
     "addOne": "Add one",
@@ -437,6 +437,10 @@
     "resetPwTooShort": "Password must be at least 8 characters",
     "resetPwSuccess": "Password reset successfully",
     "resetPwFailed": "Failed to reset password",
+    "deleteUserConfirm": "Are you sure you want to delete this user?",
+    "cannotDeleteSelf": "You cannot delete your own account.",
+    "cannotDeleteLastSuperuser": "Cannot delete the last superuser.",
+    "failedDeleteUser": "Failed to delete user",
     "failedCreateUser": "Failed to create user",
     "deviceTokens": "Device Tokens",
     "createDevice": "Create Device",
