--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -158,7 +158,7 @@
     "diameterMm": "Durchmesser (mm) *",
     "rawMaterialWeight": "Rohmaterialgewicht (g)",
     "rawMaterialPlaceholder": "z.B. 1000",
-    "defaultSpoolWeight": "Standard-Spulengewicht (g)",
+    "defaultSpoolWeight": "Leer-Spulengewicht (g)",
     "defaultSpoolWeightPlaceholder": "z.B. 250",
     "noFilaments": "Keine Filamente gefunden.",
     "addOne": "Erstellen",
@@ -438,6 +438,10 @@
     "resetPwTooShort": "Passwort muss mindestens 8 Zeichen lang sein",
     "resetPwSuccess": "Passwort erfolgreich zurückgesetzt",
     "resetPwFailed": "Passwort konnte nicht zurückgesetzt werden",
+    "deleteUserConfirm": "Möchten Sie diesen Benutzer wirklich löschen?",
+    "cannotDeleteSelf": "Sie können Ihren eigenen Account nicht löschen.",
+    "cannotDeleteLastSuperuser": "Der letzte Superuser kann nicht gelöscht werden.",
+    "failedDeleteUser": "Benutzer konnte nicht gelöscht werden",
     "failedCreateUser": "Benutzer konnte nicht erstellt werden",
     "deviceTokens": "Geräte-Token",
     "createDevice": "Gerät erstellen",
