feat: füge Unterstützung für das Projekt in die Navigation und das Layout hinzu

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -14,7 +14,8 @@
     "admin": "Admin",
     "adminPanel": "Admin-Bereich",
     "settings": "Einstellungen",
-    "logout": "Abmelden"
+    "logout": "Abmelden",
+    "supportProject": "Unterstütze das Projekt"
   },
   "theme": {
     "default": "Standard",
