feat: aktualisiere die Bezeichnung für die Kennung auf "RFID UID" in den Sprachdateien

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -358,7 +358,7 @@
     "addLocation": "Standort hinzufügen",
     "editLocation": "Standort bearbeiten",
     "name": "Name",
-    "identifier": "Kennung",
+    "identifier": "RFID UID",
     "spools": "Spulen",
     "failedLoad": "Standorte konnten nicht geladen werden",
     "failedSave": "Standort konnte nicht gespeichert werden",
