feat: füge Unterstützung für System- und Extrafelder hinzu, einschließlich Übersetzungen und Anpassungen in den Admin-Seiten

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -55,7 +55,9 @@
     "confirm": "Bestätigen",
     "errorTitle": "Fehler",
     "open": "Öffnen",
-    "customFields": "Eigene Felder"
+    "customFields": "Eigene Felder",
+    "systemFields": "Systemfelder",
+    "extraFields": "Extrafelder"
   },
   "rfid": {
     "writeTag": "RFID-Tag schreiben",
@@ -497,6 +499,19 @@
     "failedUpdatePermissions": "Berechtigungen konnten nicht aktualisiert werden",
     "selectRoleHint": "Klicke auf eine Rolle, um ihre Berechtigungen anzuzeigen",
     "permissionsForRole": "Berechtigungen f\u00fcr",
+    "extraFieldsTitle": "System-Extrafelder",
+    "extraFieldsDesc": "Systemweite Extrafelder für Spulen und Filamente",
+    "extraFieldsHint": "Diese Felder werden automatisch zu allen Filamenten oder Spulen hinzugefügt.",
+    "addField": "Feld hinzufügen",
+    "targetType": "Ziel-Typ",
+    "keyJson": "Schlüssel (JSON)",
+    "keyJsonHint": "Wird als Schlüssel im custom_fields JSON verwendet.",
+    "displayLabel": "Anzeigename",
+    "defaultValue": "Standardwert (Optional)",
+    "defaultValueHint": "Dieser Wert wird beim Erstellen neuer Einträge vorausgefüllt.",
+    "noFieldsDefined": "Keine Felder definiert",
+    "failedDeleteField": "Feld konnte nicht gelöscht werden",
+    "deleteFieldConfirm": "Feld wirklich löschen?",
     "dangerZone": "Gefahrenzone",
     "killswitchTitle": "Alle Daten l\u00f6schen",
     "killswitchDesc": "Alle Spulen, Filamente, Hersteller, Farben, Standorte und Drucker samt Logs und Events unwiderruflich l\u00f6schen. Benutzer, Rollen, Berechtigungen und Ger\u00e4te sind nicht betroffen.",
