--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -496,6 +496,19 @@
     "failedUpdatePermissions": "Failed to update permissions",
     "selectRoleHint": "Click on a role to see its permissions",
     "permissionsForRole": "Permissions for",
+    "extraFieldsTitle": "System Extra Fields",
+    "extraFieldsDesc": "System-wide extra fields for spools and filaments",
+    "extraFieldsHint": "These fields will be automatically added to all filaments or spools.",
+    "addField": "Add Field",
+    "targetType": "Target Type",
+    "keyJson": "Key (JSON)",
+    "keyJsonHint": "Used as key in the custom_fields JSON.",
+    "displayLabel": "Display Label",
+    "defaultValue": "Default Value (Optional)",
+    "defaultValueHint": "This value will be pre-filled when creating new items.",
+    "noFieldsDefined": "No fields defined",
+    "failedDeleteField": "Failed to delete field",
+    "deleteFieldConfirm": "Delete field?",
     "dangerZone": "Danger Zone",
     "killswitchTitle": "Delete all data",
     "killswitchDesc": "Permanently delete all spools, filaments, manufacturers, colors, locations, and printers including their logs and events. Users, roles, permissions, and devices are not affected.",
