feat: add cascading spool properties and update related models, schemas, and UI
- Added new columns for spool properties (outer diameter, width, material, and empty weight) to the manufacturers, filaments, and spools tables via Alembic migration.
- Updated Manufacturer and Filament models to include new spool properties.
- Enhanced FilamentCreate, FilamentUpdate, and FilamentResponse schemas to support new spool properties.
- Modified SpoolCreate, SpoolUpdate, and SpoolResponse schemas to include spool material.
- Implemented cascading property assignment in the create_filament and create_spool API endpoints.
- Updated frontend forms for filaments and spools to include new spool properties with appropriate labels and input fields.
- Added localization for new spool material options in English and German.

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -309,6 +309,11 @@
     "failedUpdate": "Spule konnte nicht aktualisiert werden",
     "spoolOuterDiameter": "Spulen-Außendurchmesser (mm)",
     "spoolWidth": "Spulenbreite (mm)",
+    "spoolMaterial": "Spulenmaterial",
+    "spoolMaterialPlastic": "Plastik",
+    "spoolMaterialCardboard": "Pappe",
+    "spoolMaterialMetal": "Metall",
+    "spoolMaterialOther": "Sonstiges",
     "purchasePrice": "Kaufpreis",
     "purchaseDate": "Kaufdatum",
     "expirationDate": "Ablaufdatum"
