fix: füge Unterstützung für Spool-Standardwerte hinzu und verbessere die Eingabefelder in den Formularen

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -316,7 +316,8 @@
     "spoolMaterialOther": "Sonstiges",
     "purchasePrice": "Kaufpreis",
     "purchaseDate": "Kaufdatum",
-    "expirationDate": "Ablaufdatum"
+    "expirationDate": "Ablaufdatum",
+    "spoolDefaultSettings": "Spool-Standardwerte"
   },
   "colors": {
     "title": "Farben verwalten",
