feat: füge Preisverlauf-Sektion hinzu und implementiere Diagramm zur Preisdarstellung

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -162,6 +162,7 @@
     "spoolWeight": "Spulengewicht",
     "color": "Farbe",
     "colors": "Farben",
+    "priceHistory": "Preisverlauf",
     "colorName": "Farbname",
     "colorNamePlaceholder": "z.B. Feuerrot",
     "designationPlaceholder": "z.B. PLA Basic Rot",
