--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -159,6 +159,7 @@
     "spoolWeight": "Spool Weight",
     "color": "Color",
     "colors": "Colors",
+    "priceHistory": "Price History",
     "colorName": "Color Name",
     "colorNamePlaceholder": "e.g. Fire Engine Red",
     "designationPlaceholder": "e.g. PLA Basic Red",
