--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -163,6 +163,8 @@
     "color": "Farbe",
     "colors": "Farben",
     "priceHistory": "Preisverlauf",
+    "totalValueAvailable": "Gesamtwert (verfügbar)",
+    "totalSpentAllTime": "Gesamtausgaben (historisch)",
     "colorName": "Farbname",
     "colorNamePlaceholder": "z.B. Feuerrot",
     "designationPlaceholder": "z.B. PLA Basic Rot",
