feat: füge Gesamtwert verfügbarer Spulen zur Dashboard-Statistik hinzu fix: aktualisiere die Anzeige für niedrige und leere Spulen

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -98,6 +98,8 @@
     "totalSpools": "Spulen gesamt",
     "filaments": "Filamente",
     "emptySpools": "Leere Spulen",
+    "lowAndEmptySpools": "Niedrige & leere Spulen",
+    "totalValue": "Gesamtwert (verfügbar)",
     "allSufficient": "Alle Spulen haben ausreichend Filament",
     "noRecentActivity": "Keine aktuelle Aktivität",
     "spoolId": "Spule #{id}",
@@ -111,6 +113,7 @@
     "archiveAllLow": "Alle niedrigen Spulen archivieren",
     "confirmArchiveAll": "Möchten Sie wirklich alle hier gelisteten Spulen archivieren?",
     "confirmArchiveOne": "Möchten Sie diese Spule archivieren?",
+    "archiveAll": "Alle archivieren",
     "archiveSuccess": "Spulen erfolgreich archiviert.",
     "spool": "Spule",
     "filament": "Filament",
