feat: add QR code generation and print label functionality
- Added qrcode.min.js for QR code generation.
- Updated German and English translations to include "Print Label".
- Changed script source for Chart.js to local vendor file.
- Implemented print label feature in the spool detail page:
  - Added print label button and associated styles for print layout.
  - Created a hidden template for the label with QR code and spool details.
  - Added functionality to generate and print the label with QR code.

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -270,6 +270,7 @@
     "spoolId": "Spule #{id}",
     "spoolCount": "{count} Spule(n)",
     "confirmDelete": "Möchten Sie diese Spule wirklich löschen?",
+    "printLabel": "Label drucken",
     "quickActions": "Schnellaktionen",
     "recordWeight": "Gewicht erfassen",
     "adjust": "Anpassen",
