feat: füge Drucklabel-Funktionalität mit Modal hinzu

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -53,6 +53,7 @@
     "offline": "Offline",
     "confirmTitle": "Bestätigung",
     "confirm": "Bestätigen",
+    "print": "Drucken",
     "errorTitle": "Fehler",
     "open": "Öffnen",
     "customFields": "Eigene Felder",
