--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -53,6 +53,7 @@
     "offline": "Offline",
     "confirmTitle": "Confirm",
     "confirm": "Confirm",
+    "print": "Print",
     "errorTitle": "Error",
     "open": "Open",
     "customFields": "Custom Fields",
