feat: füge Druckeinstellungen und Label-Vorschau hinzu

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -272,6 +272,17 @@
     "spoolCount": "{count} Spule(n)",
     "confirmDelete": "Möchten Sie diese Spule wirklich löschen?",
     "printLabel": "Label drucken",
+    "printSettings": "Druckeinstellungen",
+    "labelWidth": "Breite (mm)",
+    "labelHeight": "Höhe (mm)",
+    "showQRCode": "QR-Code",
+    "showSpoolId": "Spulen-ID",
+    "showMaterial": "Material",
+    "showColor": "Farbe",
+    "showManufacturer": "Hersteller",
+    "fontSize": "Schriftgröße",
+    "qrSize": "QR-Größe",
+    "resetDefaults": "Standardwerte",
     "quickActions": "Schnellaktionen",
     "recordWeight": "Gewicht erfassen",
     "adjust": "Anpassen",
