--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -268,6 +268,17 @@
     "spoolCount": "{count} spool(s)",
     "confirmDelete": "Are you sure you want to delete this spool?",
     "printLabel": "Print Label",
+    "printSettings": "Print Settings",
+    "labelWidth": "Width (mm)",
+    "labelHeight": "Height (mm)",
+    "showQRCode": "QR Code",
+    "showSpoolId": "Spool ID",
+    "showMaterial": "Material",
+    "showColor": "Color",
+    "showManufacturer": "Manufacturer",
+    "fontSize": "Font Size",
+    "qrSize": "QR Size",
+    "resetDefaults": "Defaults",
     "quickActions": "Quick Actions",
     "recordWeight": "Record Weight",
     "adjust": "Adjust",
