feat: füge permanente Löschfunktion für Spulen hinzu und aktualisiere das Löschen-Modal

--- a/frontend/src/i18n/de.json
+++ b/frontend/src/i18n/de.json
@@ -271,6 +271,10 @@
     "spoolId": "Spule #{id}",
     "spoolCount": "{count} Spule(n)",
     "confirmDelete": "Möchten Sie diese Spule wirklich löschen?",
+    "archiveSpool": "Archivieren",
+    "deleteSpool": "Löschen",
+    "permanentDeleteLabel": "Endgültig löschen statt archivieren",
+    "permanentDeleteWarning": "Diese Spule wird dauerhaft aus der Datenbank gelöscht und fließt nicht mehr in Statistiken ein.",
     "printLabel": "Label drucken",
     "printSettings": "Druckeinstellungen",
     "labelWidth": "Breite (mm)",
