--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -267,6 +267,10 @@
     "spoolId": "Spool #{id}",
     "spoolCount": "{count} spool(s)",
     "confirmDelete": "Are you sure you want to delete this spool?",
+    "archiveSpool": "Archive",
+    "deleteSpool": "Delete",
+    "permanentDeleteLabel": "Permanently delete instead of archiving",
+    "permanentDeleteWarning": "This spool will be permanently deleted from the database and will no longer be included in statistics.",
     "printLabel": "Print Label",
     "printSettings": "Print Settings",
     "labelWidth": "Width (mm)",
